lib/src/native_bindings.g.dart

// Copyright (c) 2026 just_image contributors.
// SPDX-License-Identifier: MIT
// Generated by package:ffigen. Do not edit manually.
// Regenerate with: dart run tool/ffigen.dart

// ignore_for_file: type=lint, camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset('package:just_image/src/native_bindings.g.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Uint32 Function()>(isLeaf: true)
external int rust_abi_version();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> rust_available_filters();

@ffi.Native<FfiResult Function(ffi.Pointer<ffi.Char>, ffi.Uint32, ffi.Uint32)>()
external FfiResult rust_blurhash_decode(
  ffi.Pointer<ffi.Char> hash_ptr,
  int width,
  int height,
);

@ffi.Native<
  FfiResult Function(ffi.Pointer<ffi.Uint8>, ffi.Size, ffi.Uint32, ffi.Uint32)
>()
external FfiResult rust_blurhash_encode(
  ffi.Pointer<ffi.Uint8> input_ptr,
  int input_len,
  int components_x,
  int components_y,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.Size)>(isLeaf: true)
external void rust_free_buffer(ffi.Pointer<ffi.Uint8> ptr, int len);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>(isLeaf: true)
external void rust_free_error(ffi.Pointer<ffi.Char> ptr);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>(isLeaf: true)
external void rust_free_string(ffi.Pointer<ffi.Char> ptr);

@ffi.Native<FfiResult Function(ffi.Pointer<ffi.Uint8>, ffi.Size)>()
external FfiResult rust_image_info(
  ffi.Pointer<ffi.Uint8> input_ptr,
  int input_len,
);

@ffi.Native<
  FfiResult Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
  )
>()
external FfiResult rust_process_pipeline(
  ffi.Pointer<ffi.Uint8> input_ptr,
  int input_len,
  ffi.Pointer<ffi.Char> config_json,
  ffi.Pointer<ffi.Uint8> watermark_ptr,
  int watermark_len,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> rust_version();

final class FfiResult extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Size()
  external int len;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  external ffi.Pointer<ffi.Char> error;

  static ffi.Pointer<FfiResult> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Uint8> data,
    required int len,
    required int width,
    required int height,
    required ffi.Pointer<ffi.Char> error,
  }) => $allocator<FfiResult>()
    ..ref.data = data
    ..ref.len = len
    ..ref.width = width
    ..ref.height = height
    ..ref.error = error;
}
